[gd_scene load_steps=12 format=3 uid="uid://cvlgf3lprgn4"]

[ext_resource type="Script" path="res://scripts/main_level.gd" id="1_1hff5"]
[ext_resource type="PackedScene" uid="uid://bxb4we6clsdqp" path="res://levels/Env.tscn" id="1_68sgc"]
[ext_resource type="PackedScene" uid="uid://dgpjxoygnvyy4" path="res://assets/player/Player.tscn" id="2_t5ga8"]
[ext_resource type="AudioStream" uid="uid://jv43jugfj0ts" path="res://sound/Monster_Theme_001_Bass.mp3" id="5_6423e"]
[ext_resource type="PackedScene" uid="uid://b8gdforp2mtwu" path="res://assets/Gameplay/MonsterEvent.tscn" id="5_n4x6b"]
[ext_resource type="AudioStream" uid="uid://d28b4umtrm044" path="res://sound/Monster_Theme_001_Drums.mp3" id="6_4778u"]
[ext_resource type="AudioStream" uid="uid://cl0xb3f7fql6w" path="res://sound/SFX_BGNoise_001.mp3" id="7_6hcjw"]
[ext_resource type="AudioStream" uid="uid://coujusol2xs3g" path="res://sound/Monster_Theme_001_Keys.mp3" id="7_ghnrq"]

[sub_resource type="Animation" id="Animation_srbt5"]
resource_name = "MonsterMusic02_FadeIn"
length = 3.0
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Sound/MonsterMusic02:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 3.13833),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_s2548"]
resource_name = "MonsterMusic03_FadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Sound/MonsterMusic03:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 3.03143),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3m7da"]
_data = {
"MonsterMusic02_FadeIn": SubResource("Animation_srbt5"),
"MonsterMusic03_FadeIn": SubResource("Animation_s2548")
}

[node name="MainLevel" type="Node3D"]
script = ExtResource("1_1hff5")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -105.0
grow_horizontal = 2
grow_vertical = 0
text = "Press E to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enviro_Meshes" type="Node" parent="."]

[node name="Env" parent="Enviro_Meshes" instance=ExtResource("1_68sgc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 4)

[node name="Gameplay" type="Node" parent="."]

[node name="MonsterEvent01" parent="Gameplay" instance=ExtResource("5_n4x6b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29622, 0, -3.70365)

[node name="MonsterEvent02" parent="Gameplay" instance=ExtResource("5_n4x6b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.92623, 0, 5.34075)

[node name="MonsterEvent03" parent="Gameplay" instance=ExtResource("5_n4x6b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.45685, 0.000166893, 2.25757)

[node name="EndGame" parent="Gameplay" instance=ExtResource("5_n4x6b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.36918, 0.00146294, -0.122201)

[node name="Sound" type="Node" parent="."]

[node name="MonsterMusic_FadeIn" type="AnimationPlayer" parent="Sound"]
root_node = NodePath("../../Gameplay/MonsterEvent03")
libraries = {
"": SubResource("AnimationLibrary_3m7da")
}

[node name="MonsterMusic01" type="AudioStreamPlayer3D" parent="Sound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.32003, 1.7326, -3.72562)
stream = ExtResource("5_6423e")
max_distance = 20.0
attenuation_filter_cutoff_hz = 500.0

[node name="MonsterMusic02" type="AudioStreamPlayer3D" parent="Sound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.94918, 1.7139, 5.30828)
stream = ExtResource("6_4778u")
max_distance = 20.0
area_mask = 2
attenuation_filter_cutoff_hz = 500.0

[node name="MonsterMusic03" type="AudioStreamPlayer3D" parent="Sound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.44445, 1.75172, 2.25602)
stream = ExtResource("7_ghnrq")
volume_db = -80.0
max_distance = 20.0
area_mask = 4
attenuation_filter_cutoff_hz = 500.0

[node name="BGNoise_001" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("7_6hcjw")
autoplay = true

[node name="Player" parent="." instance=ExtResource("2_t5ga8")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -3.56307, 1.04221, -3.80425)
